Added text to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+OA<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -97,5 +97,6 @@
 	    </div>
 	  </div>
 	</div>
+      </div>
       </body>
   </html>
