Added marketing copy.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Atlanta Harvest</title>
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -45,10 +45,14 @@
       body{
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
-      .heading, .subheading {
-        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+      .heading{
+        font-family: Helvetica, Arial, sans-serif;
         text-align: center;
       }
+	  .subheading{
+		font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+		text-align: center;
+		}
       p.lead {
         padding-top: 1.5%;
         font-size: 24px;
@@ -127,12 +131,12 @@
     <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>Atlanta Harvest</h1>
 	  </div>
 	</div>
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">premium produce, city fresh.</p>
 	  </div>
 	</div>
       <div class="row-fluid pitch">
@@ -186,19 +190,50 @@
 	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	  </div>
 	<div class="span5 copy">
+	<h3>Good for You</h3>
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis congue elit nibh, tristique laoreet orci lacinia ornare. Sed tempor ut leo at vehicula. Integer quis diam viverra nibh tincidunt ultricies. In sed tellus dolor. Phasellus nec cursus eros, sit amet feugiat augue. Pellentesque porta luctus nisi. Donec consectetur lacus sed urna tincidunt eleifend non et tellus. Mauris ut nulla dui. Sed sed tempus ipsum, non dignissim arcu. Donec mauris velit, dignissim nec dolor sed, pretium porta lectus. Integer tincidunt vitae nibh nec consectetur. Suspendisse sit amet orci pellentesque, elementum libero sit amet, ultricies libero. Donec ante magna, mattis bibendum fringilla non, rutrum sed lectus. In consectetur condimentum leo sit amet pellentesque. Curabitur elit felis, ultricies at consequat in, volutpat ut diam.
+	    Atlanta Harvest will be the city’s leading source of 100% organic, ultra-local greens and lettuce. Due to Atlanta Harvest’s incredible proximity to market, our produces will often go from farm to table within the same day. This provides our customers with the freshest vegetables possible, at prices competitive with industrial farms. Our vegetables are grown in Certified Organic compost, using only natural fertilizers and nutrients, ensuring our customers receive the most natural, and freshest, produce available.
 	    </p>
 	  </div>
 	</div>
-      <div class="row-fluid section2">
+    <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
+	<h3>Good for Farmers</h3>
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis congue elit nibh, tristique laoreet orci lacinia ornare. Sed tempor ut leo at vehicula. Integer quis diam viverra nibh tincidunt ultricies. In sed tellus dolor. Phasellus nec cursus eros, sit amet feugiat augue. Pellentesque porta luctus nisi. Donec consectetur lacus sed urna tincidunt eleifend non et tellus. Mauris ut nulla dui. Sed sed tempus ipsum, non dignissim arcu. Donec mauris velit, dignissim nec dolor sed, pretium porta lectus. Integer tincidunt vitae nibh nec consectetur. Suspendisse sit amet orci pellentesque, elementum libero sit amet, ultricies libero. Donec ante magna, mattis bibendum fringilla non, rutrum sed lectus. In consectetur condimentum leo sit amet pellentesque. Curabitur elit felis, ultricies at consequat in, volutpat ut diam.
+	    Our company will act as an integrator for aspiring local entrepreneurs, connecting them with the knowledge, resources, and markets that they will need to thrive in Atlanta’s blossoming local food market.
 	    </p>
+		<div class="row-fluid">
+		<div class="span11 offset1 copy">
+		<h4>Front-End Services</h4>
+		<p>
+		Atlanta Harvest will specialize in planting new urban farms, by helping new farmers construct, fund, and operate their own independent farm. We will provide all new farmers with training in farming techniques, as well as business skills development, to ensure they have all the proper tools to operate a thriving small business.
+		</p>
+		</div>
+		<div class="row-fluid">
+		<div class="span11 offset1 copy">
+		<h4>Back-End Services</h4>
+		<p>
+		Once started, our company will provide support and distribution services to any of the farms within the Atlanta Harvest network. In addition to a unified brand identity and pooled resources to secure large contracts, Atlanta Harvest farmers gain access to services such as supply chain management, soil testing, and farming equipment.
+		</p>
+		</div>
+		</div>
+		</div>
 	  </div>
 	<div class="span5 asset">
 	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  </div>
+	</div>
+	
+	<div class="row-fluid section3">
+	
+	<div class="span5 offset1 copy">
+	<h3>Great for Atlanta</h3>
+	<p>Atlanta Harvest is a triple-bottom-line company with a big vision: to see urban agriculture form the back bone of thriving neighborhood economies in Atlanta, and across the United States.</p>
+	<p>Socially, we aim to bring green jobs into a city facing high unemployment and chronically low wages. AH farmers enjoy the benefits of low up-front investment, a true living wage, healthcare benefits, and a guaranteed buyer for their product.</p>
+	<p>Environmentally, our company reduces Atlanta’s carbon footprint by preserving its green space on the lots we use for farming. We also cut out the thousands of metric tons of CO2 currently created by transporting most of Atlanta’s lettuce and greens across the country from California.</p>
+	</div>
+	<div class="span5 asset">
+		<img class="img-polaroid" src="http://placehold.it/480x300">
 	  </div>
 	</div>
       
